# bitbucket

./: .travis.yml  README.md
bitbucket-cli/: .mafiaignore  Makefile  bitbucket-cli.cabal  bitbucket-cli.lock-8.0.2  bitbucket-cli.lock-8.2.2
bitbucket-cli/main/: bitb.hs
bitbucket-cli/src/Irreverent/Bitbucket/Cli/: Error.hs  Main.hs
bitbucket-cli/src/Irreverent/Bitbucket/Cli/Commands/: AddAccessKey.hs  CreateRepo.hs  DeletePipelineEnvironmentVariable.hs  GetPipelineEnvironmentVariables.hs  ListRepos.hs  PipelineConfig.hs  SetGroupPrivs.hs  SetPipelineEnvironmentVariable.hs  SetPipelineSSHKeys.hs  UpdatePipelineConfig.hs
bitbucket-core/: bitbucket-core.cabal  bitbucket-core.lock-8.0.2  bitbucket-core.lock-8.2.2
bitbucket-core/src/Irreverent/Bitbucket/: Core.hs
bitbucket-core/src/Irreverent/Bitbucket/Core/: Control.hs
bitbucket-core/src/Irreverent/Bitbucket/Core/Data/: AccessKey.hs  Auth.hs  Commit.hs  Common.hs  Group.hs  NewAccessKey.hs  NewRepository.hs  Paginated.hs  Repository.hs  RepositorySummary.hs
bitbucket-core/src/Irreverent/Bitbucket/Core/Data/Groups/: Privileges.hs
bitbucket-core/src/Irreverent/Bitbucket/Core/Data/Pipelines/: Config.hs  EnvironmentVariable.hs  NewEnvironmentVariable.hs  NewSSHKeyPair.hs  SSHKeyPair.hs  UpdateConfig.hs
bitbucket-core/src/Irreverent/Bitbucket/Core/Data/PullRequests/: PullRequest.hs
bitbucket-core/test/: bitbucket-core-test.cabal  bitbucket-core-test.lock-8.2.2
bitbucket-core/test/Test/Irreverent/Bitbucket/Core/: Arbitraries.hs
bitbucket-http-client/: bitbucket-http-client.cabal  bitbucket-http-client.lock-8.0.2  bitbucket-http-client.lock-8.2.2
bitbucket-http-client/src/Irreverent/Bitbucket/: Http.hs
bitbucket-http-client/src/Irreverent/Bitbucket/Http/: Common.hs  Error.hs  Methods.hs  Paginated.hs
bitbucket-http-client/src/Irreverent/Bitbucket/Http/Groups/Privileges/: Add.hs
bitbucket-http-client/src/Irreverent/Bitbucket/Http/Repositories/: AddAccessKey.hs  List.hs  New.hs
bitbucket-http-client/src/Irreverent/Bitbucket/Http/Repositories/Pipelines/: AddEnvironmentVariable.hs  AddSSHKeyPair.hs  DeleteEnvironmentVariable.hs  GetConfig.hs  GetEnvironmentVariables.hs  UpdateConfig.hs
bitbucket-json/: bitbucket-json.cabal  bitbucket-json.lock-8.0.2  bitbucket-json.lock-8.2.2
bitbucket-json/src/Irreverent/Bitbucket/: Json.hs
bitbucket-json/src/Irreverent/Bitbucket/Json/: AccessKey.hs  Common.hs  Group.hs  NewAccessKey.hs  NewRepository.hs  Paginated.hs  Repository.hs  RepositorySummary.hs
bitbucket-json/src/Irreverent/Bitbucket/Json/Groups/: Privileges.hs
bitbucket-json/src/Irreverent/Bitbucket/Json/Pipelines/: Config.hs  EnvironmentVariable.hs  NewEnvironmentVariable.hs  NewSSHKeyPair.hs  SSHKeyPair.hs  UpdateConfig.hs
bitbucket-json/test/: test.hs
bitbucket-json/test/Test/Irreverent/Bitbucket/: Json.hs
bitbucket-optparse/: bitbucket-optparse.cabal  bitbucket-optparse.lock-8.0.2  bitbucket-optparse.lock-8.2.2
bitbucket-optparse/src/Irreverent/Bitbucket/: Options.hs
