name:               irreverent-bitbucket-cli
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017 Irreverent Pixel Feats
synopsis:           bitb CLI
category:           Data
description:        bitb CLI
homepage:           https://github.com/irreverent-pixel-feats/bitbucket
bug-reports:        https://github.com/irreverent-pixel-feats/bitbucket/issues
cabal-version:      >= 1.18
build-type:         Simple

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/bitbucket.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , domdere-preamble
                      , irreverent-bitbucket-core
                      , irreverent-bitbucket-http-client
                      , irreverent-bitbucket-optparse
                      , ultra-cli
                      , ultra-conduit
                      , ultra-either
                      , ultra-optparse
                      , ultra-text
                      , ultra-semigroups
                      , wreq                   == 0.4.*

    ghc-options:        -Wall

    hs-source-dirs:     src
                        gen

    exposed-modules:    BuildInfo_bitb
                        Irreverent.Bitbucket.Cli.Main
                        Irreverent.Bitbucket.Cli.Commands.ListRepos

executable              bitb
    default-language:   Haskell2010
    hs-source-dirs:     main

    main-is:            bitb.hs

    ghc-options:        -Wall

    build-depends:      base < 5 && >= 4
                    ,   domdere-preamble
                    ,   irreverent-bitbucket-cli

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   irreverent-bitbucket-cli
