name:               irreverent-bitbucket-cli
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017 Irreverent Pixel Feats
synopsis:           bitb CLI
category:           Data
description:        bitb CLI
homepage:           https://github.com/irreverent-pixel-feats/bitbucket
bug-reports:        https://github.com/irreverent-pixel-feats/bitbucket/issues
cabal-version:      >= 1.18
build-type:         Custom

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/bitbucket.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , aeson-pretty            == 0.8.*
                      , bytestring              == 0.10.*
                      , containers
                      , domdere-preamble
                      , irreverent-bitbucket-core
                      , irreverent-bitbucket-http-client
                      , irreverent-bitbucket-json
                      , irreverent-bitbucket-optparse
                      , ultra-cli
                      , ultra-conduit
                      , ultra-either
                      , ultra-exceptions
                      , ultra-io
                      , ultra-optparse
                      , ultra-text
                      , ultra-semigroups
                      , wreq                    == 0.5.*

    ghc-options:        -Wall

    hs-source-dirs:     src
                        gen

    exposed-modules:    BuildInfo_irreverent_bitbucket_cli
                        Irreverent.Bitbucket.Cli.Commands.AddAccessKey
                        Irreverent.Bitbucket.Cli.Commands.DeletePipelineEnvironmentVariable
                        Irreverent.Bitbucket.Cli.Commands.GetPipelineEnvironmentVariables
                        Irreverent.Bitbucket.Cli.Commands.SetPipelineEnvironmentVariable
                        Irreverent.Bitbucket.Cli.Commands.SetPipelineSSHKeys
                        Irreverent.Bitbucket.Cli.Commands.CreateRepo
                        Irreverent.Bitbucket.Cli.Commands.ListRepos
                        Irreverent.Bitbucket.Cli.Commands.PipelineConfig
                        Irreverent.Bitbucket.Cli.Commands.UpdatePipelineConfig
                        Irreverent.Bitbucket.Cli.Error
                        Irreverent.Bitbucket.Cli.Main

executable              bitb
    default-language:   Haskell2010
    hs-source-dirs:     main

    main-is:            bitb.hs

    ghc-options:        -Wall

    build-depends:      base < 5 && >= 4
                    ,   domdere-preamble
                    ,   irreverent-bitbucket-cli

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   irreverent-bitbucket-cli
