name:               irreverent-bitbucket-core
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017 Irreverent Pixel Feats
synopsis:           Core types for Bitbucket API
category:           Data
description:        Core types for Bitbucket API
homepage:           https://github.com/irreverent-pixel-feats/bitbucket
bug-reports:        https://github.com/irreverent-pixel-feats/bitbucket/issues
cabal-version:      >= 1.18
build-type:         Simple

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/bitbucket.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , domdere-preamble
                      , ultra-exceptions
                      , ultra-text
                      , time                    == 1.6.*

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Bitbucket.Core
                        Irreverent.Bitbucket.Core.Control
                        Irreverent.Bitbucket.Core.Data.Auth
                        Irreverent.Bitbucket.Core.Data.Common
                        Irreverent.Bitbucket.Core.Data.AccessKey
                        Irreverent.Bitbucket.Core.Data.NewAccessKey
                        Irreverent.Bitbucket.Core.Data.NewRepository
                        Irreverent.Bitbucket.Core.Data.Paginated
                        Irreverent.Bitbucket.Core.Data.Pipelines.Config
                        Irreverent.Bitbucket.Core.Data.Pipelines.EnvironmentVariable
                        Irreverent.Bitbucket.Core.Data.Pipelines.NewEnvironmentVariable
                        Irreverent.Bitbucket.Core.Data.Pipelines.NewSSHKeyPair
                        Irreverent.Bitbucket.Core.Data.Pipelines.SSHKeyPair
                        Irreverent.Bitbucket.Core.Data.Pipelines.UpdateConfig
                        Irreverent.Bitbucket.Core.Data.Repository
                        Irreverent.Bitbucket.Core.Data.RepositorySummary

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   irreverent-bitbucket-core
