name:               irreverent-bitbucket-http-client
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017 Irreverent Pixel Feats
synopsis:           HTTP API for bitbucket
category:           Data
description:        HTTP API for bitbucket
homepage:           https://github.com/irreverent-pixel-feats/bitbucket
bug-reports:        https://github.com/irreverent-pixel-feats/bitbucket/issues
cabal-version:      >= 1.18
build-type:         Simple

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/bitbucket.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , domdere-preamble
                      , irreverent-bitbucket-core
                      , irreverent-bitbucket-json
                      , ultra-aeson
                      , ultra-conduit
                      , ultra-either
                      , ultra-exceptions
                      , ultra-http-client
                      , ultra-lens
                      , ultra-text
                      , http-client-tls        < 0.3
                      , http-conduit           == 2.1.*
                      , http-types             == 0.9.*
                      , time                   == 1.6.*
                      , wreq                   == 0.4.*

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Bitbucket.Http
                        Irreverent.Bitbucket.Http.Common
                        Irreverent.Bitbucket.Http.Error
                        Irreverent.Bitbucket.Http.Repositories.List
                        Irreverent.Bitbucket.Http.Repositories.New

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   irreverent-bitbucket-http-client
