name:               irreverent-bitbucket-json
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017
synopsis:           JSON serialisation for the Core Bitbucket types
category:           Data
description:        JSON serialisation for the Core Bitbucket types
homepage:           https://github.com/irreverent-pixel-feats/bitbucket
bug-reports:        https://github.com/irreverent-pixel-feats/bitbucket/issues
cabal-version:      >= 1.18
build-type:         Simple

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/bitbucket.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , domdere-preamble
                      , irreverent-bitbucket-core
                      , iso8601-time           == 0.1.*
                      , time                   >= 1.6 && < 1.9
                      , ultra-aeson
                      , ultra-text

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Bitbucket.Json
                        Irreverent.Bitbucket.Json.Common
                        Irreverent.Bitbucket.Json.AccessKey
                        Irreverent.Bitbucket.Json.NewAccessKey
                        Irreverent.Bitbucket.Json.NewRepository
                        Irreverent.Bitbucket.Json.Paginated
                        Irreverent.Bitbucket.Json.Pipelines.Config
                        Irreverent.Bitbucket.Json.Pipelines.EnvironmentVariable
                        Irreverent.Bitbucket.Json.Pipelines.NewEnvironmentVariable
                        Irreverent.Bitbucket.Json.Pipelines.NewSSHKeyPair
                        Irreverent.Bitbucket.Json.Pipelines.SSHKeyPair
                        Irreverent.Bitbucket.Json.Pipelines.UpdateConfig
                        Irreverent.Bitbucket.Json.Repository
                        Irreverent.Bitbucket.Json.RepositorySummary

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   bytestring          == 0.10.*
                    ,   lab-core
                    ,   domdere-preamble
                    ,   irreverent-bitbucket-core-test
                    ,   irreverent-bitbucket-json
                    ,   ultra-aeson
