name:               irreverent-bitbucket-core-test
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017 Irreverent Pixel Feats
synopsis:           Gens and Arbitraries for Core bitbucket types
category:           Data
description:        Gens and Arbitraries for Core bitbucket types
homepage:           https://github.com/irreverent-pixel-feats/bitbucket
bug-reports:        https://github.com/irreverent-pixel-feats/bitbucket/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/bitbucket.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , irreverent-bitbucket-core
                      , lab-core
                      , domdere-preamble
                      , ultra-text
                      , containers
                      , time                    == 1.6.*
                      , quickcheck-instances    == 0.3.*

    ghc-options:        -Wall

    hs-source-dirs:     .

    exposed-modules:    Test.Irreverent.Bitbucket.Core.Arbitraries
